BPER/DEVF/force-app/main/default/objects/Utenza_BPER__mdt/Utenza_BPER__mdt.object-meta.xml
<CustomObject>
    <label>Utenza_BPER</label>
    <pluralLabel>Utenze_BPER</pluralLabel>
</CustomObject>