BPER/DEVF/force-app/main/default/objects/Utenza_BPER__mdt/fields/Codice_Ruolo__c.field-meta.xml
<CustomField>
    <fullName>Codice_Ruolo__c</fullName>
    <label>Codice Ruolo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>