BPER/DEVF/force-app/main/default/objects/Utenza_BPER__mdt/fields/Profilo__c.field-meta.xml
<CustomField>
    <fullName>Profilo__c</fullName>
    <label>Profilo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>